--- a/app/module-1/m0d/page.mdx
+++ b/app/module-1/m0d/page.mdx
@@ -7,7 +7,7 @@ import { Steps } from 'nextra/components'
 import { FileTree } from 'nextra/components'
 
 <Steps>
-    ### Enable showing file extensions on your system.
+    ### Enable showing file extensions.
     - **Windows Instructions:**
     1. Open File Explorer (Shortcut: WIN + E)
     2. Click View
@@ -19,12 +19,12 @@ import { FileTree } from 'nextra/components'
     3. Click Settings (Shortcut: CMD + ,)
     4. Navigate to Advanced
     5. Enable Show all filename extensions
-    ### Install a Code Editor of your choosing.
+    ### Install a Code Editor
     We recommend using Visual Studio Code (VS Code) which can be downloaded [here](https://code.visualstudio.com/).
     If you install Visual Studio Code, please download the [Live Server
     Extension](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) from the Extensions
     Marketplace.
-    ### Install an FTP Client of your choosing.
+    ### Install an FTP Client
     We recommend using [FileZilla](https://filezilla-project.org/) which is free and works on Windows, macOS, and Linux.
     ### Install the University's VPN Client
     You can download the VPN from [here](https://vpn.charlotte.edu)
@@ -39,29 +39,33 @@ import { FileTree } from 'nextra/components'
 </Steps>
 ## Set up GitHub
 <Steps>
-    ### Go to [GitHub.com](https://www.github.com) and sign in or sign up for an account.
+    ### Create GitHub profile
+    Go to [GitHub.com](https://www.github.com) and sign in or sign up for an account.
+    > If you already have an account you my use that as well.
 
-    ### Navigate to the create repository button and create a repository.
-
-    ### Name the repository as follows: **YOUR_GITHUB_USERNAME**.github.io
-
-    > [!NOTE]
-    >
+    ### Create a repository
+    Navigate to the create repository button and create a repository, then name the repository as follows: **YOUR_GITHUB_USERNAME**.github.io
     > My GitHub username is **alexandernc0043** so my repository should be named alexandernc0043.github.io
 
     > [!CAUTION]
     >
     > If you do not name your repository exactly like that your webpage will not work.
 
-    ### Open GitHub Desktop and clone your repository.
+    ### Clone your repository
+    Open GitHub desktop and sign in with your GitHub account details and clone the repository to your machine.
 
-    ### Open your cloned repository in Visual Studio Code by clicking the button inside GitHub Desktop.
+    ### Open your project
+    Open your cloned repository in Visual Studio Code by clicking the button inside GitHub Desktop.
+    > **Note:** you may need to change the default code editor which can be done by clicking settings next to the open button.
 </Steps>
 
 ## Creating your first webpage.
 <Steps>
     ### Create index.html
     Inside your folder create a file named `index.html`
+    > [!WARNING]
+    >
+    > Make sure not to name it something like `index.html.txt`, `Index.html`, or `INDEX.HTML`. it must be `index.html` all lowercase.
 
     ### Generate the boilerplate code
     Using Visual Studio Code's [Emmett](https://docs.emmet.io/cheat-sheet/) tool type an ! and hit Tab or Enter on your
@@ -80,7 +84,7 @@ import { FileTree } from 'nextra/components'
     </html>
     ```
     ### Edit your title
-    You can edit the title by editing the word Document inside this element `<title>Document</title>` with \[YOUR_NAME\]
+    You can edit the title by editing the word Document inside this element `<title>Document</title>{:html}` with \[YOUR_NAME\]
     \[Divider\] Homepage
 
     **Example(s):**
@@ -125,7 +129,7 @@ import { FileTree } from 'nextra/components'
    Inside your `itis3135` folder create a new file called `index.html`
    ### Open your new `index.html`
    Inside your new `index.html` file copy the contents from your previous `index.html` file.
-   ### Remove the link `<a>`
+   ### Remove the link (`<a>...</a>{:html}`)
    Since you are already on your course page you don't need a link to your course page.
    ### Replace homepage
    Everywhere you see homepage you should replace with `ITIS-3135 course page`
@@ -142,6 +146,7 @@ import { FileTree } from 'nextra/components'
    </head>
    <body>
    <h1>Welcome to my ITIS-3135 course page!</h1>
+   <!-- If your link is still here remove it.--->
    </body>
    </html>
    ```
@@ -153,9 +158,9 @@ import { FileTree } from 'nextra/components'
    4. styles
    5. project
    6. archives
-   > [!NOTE]
+   > [!TIP]
    > 
-   > GitHub won't track folders with no files inside. You can add a README.md file if you want to have it be tracked but that's not required.
+   > GitHub won't track folders with no files inside. You can add a [README.md](https://www.geeksforgeeks.org/git/what-is-readme-md-file/) file if you want to have it be tracked but that's not required.
 </Steps>
 ## Creating your UNCC webspace
 <Steps>
@@ -167,7 +172,7 @@ import { FileTree } from 'nextra/components'
     > This can take up to 10 minutes to provision.
 
     Once your webpage is created you can visit webpages.charlotte.edu/**YOUR_NINER_NET_USERNAME**/ and you should see a template website saying it's been created.
-    > **Example:** [https://webpages.charlotte.edu/aprechte](https://webpages.charlotte.edu/aprechte)
+    > **Example:** [https://webpages.charlotte.edu/aprechte/](https://webpages.charlotte.edu/aprechte/itis3135/z_archives/index.html)
 
     ### Use FileZilla to transfer your files to your university webspace.
     > [!IMPORTANT]
@@ -189,7 +194,7 @@ import { FileTree } from 'nextra/components'
     > If you include **@charlotte.edu** in your username the connection will not work.
 
     ### On the server side open the `public_html` folder.
-    `public_html` is where you should be placing all work.
+    The `public_html` folder is where you should be placing all work on the FTP server.
     ### Find your GITHUB_USER_NAME.github.io folder on your computer.
     Your computer's files are the ones on the left side. Also the default location for GitHub repositorys is Documents/GitHub.
     ### Archive your default index.html
@@ -229,8 +234,8 @@ import { FileTree } from 'nextra/components'
 ## Submission
 Please submit the following
 > Note: your university webpage and GitHub webpage should/need to be identical.
-
 * A screenshot of the entire FileZilla application showing your computer's files and server's files.
+![FileZilla](/filezilla.png)
 * The URL for your UNCC webpage's itis3135 page.
 
 > **Example:** [https://webpages.charlotte.edu/aprechte/itis3135/](https://webpages.charlotte.edu/aprechte/itis3135/)
