--- a/app/module-1/m0d/page.mdx
+++ b/app/module-1/m0d/page.mdx
@@ -12,16 +12,16 @@ import { FileTree } from 'nextra/components'
 
     - **Windows Instructions:**
     1. Open File Explorer (Shortcut: WIN + E)
-    2. Click View
-    3. Hover over Show
-    4. Click File name Extensions
+    2. Click **View**
+    3. Hover over **Show**
+    4. Click **File name Extensions**
     
     - **macOS Instructions:**
     1. Open Finder
-    2. Click Finder on the Menu Bar (Top Left)
-    3. Click Settings (Shortcut: CMD + ,)
-    4. Navigate to Advanced
-    5. Enable Show all filename extensions
+    2. Click **Finder** on the menu bar (top left)
+    3. Click **Settings** (Shortcut: CMD + ,)
+    4. Navigate to **Advanced**
+    5. Enable **Show all filename extensions**
     
     ### Install a Code Editor
     
@@ -46,7 +46,7 @@ import { FileTree } from 'nextra/components'
     You can download GitHub Desktop from [here](https://desktop.github.com/download/).\
     > [!NOTE]
     >
-    > You do not need to use GitHub Desktop and may use another Git Client or use the Git CLI. We recommend it as not everyone is familiar with git and CLI tools. But Instructions will assume that you installed it.
+    > You do not need to use GitHub Desktop and may use another Git Client or use the Git CLI. We recommend it as not everyone is familiar with git and CLI tools. But instructions will assume that you installed it.
 
 </Steps>
 
@@ -57,7 +57,7 @@ import { FileTree } from 'nextra/components'
 
     Go to [GitHub.com](https://www.github.com) and sign in or sign up for an account.
 
-    > If you already have an account you my use that as well.
+    > If you already have an account you may use that as well.
 
     ### Create a repository
 
@@ -143,14 +143,14 @@ import { FileTree } from 'nextra/components'
     
     > [!TIP]
     >
-    > The `href` attribute stands for hypertext refrence and the value of it is where your link will go.
+    > The `href` attribute stands for hypertext reference and the value of it is where your link will go.
 
     **Your body should now look like this:**
     ```html
     <!-- USERNAME.github.io/index.html -->
     <body>
     <h1>Welcome to my homepage!</h1>
-    <a href="itis3135">Click here to go to my ITIS-3135 coursepage!</a>
+    <a href="itis3135">Click here to go to my ITIS-3135 course page!</a>
     </body>
     ```
 
@@ -162,10 +162,10 @@ import { FileTree } from 'nextra/components'
 
    ### Create your course folder
 
-   Inside your GITHUB_USER_NAME.github.io folder create a folder named `itis3135`
+   Inside your YOUR_GITHUB_USERNAME.github.io folder create a folder named `itis3135`
    > [!NOTE]
    >
-   > In the future your GITHUB_USER_NAME.github.io folder will be referred to as the "root" of your website
+   > In the future your YOUR_GITHUB_USERNAME.github.io folder will be referred to as the "root" of your website
 
    ### Create your second `index.html` file
 
@@ -209,7 +209,7 @@ import { FileTree } from 'nextra/components'
    2. components
    3. scripts
    4. styles
-   5. project
+   5. projects
    6. archives
 
    > [!TIP]
@@ -243,7 +243,7 @@ import { FileTree } from 'nextra/components'
         Client you will type **vpn.charlotte.edu** then Login with your NinerNet
         account details.
     
-    ### Conecting to the university's FTP server.
+    ### Connecting to the university's FTP server.
     
     Details for connecting to the FTP Server
     
@@ -262,17 +262,17 @@ import { FileTree } from 'nextra/components'
     
     The `public_html` folder is where you should be placing all work on the FTP server.
     
-    ### Find your GITHUB_USER_NAME.github.io folder on your computer.
+    ### Find your YOUR_GITHUB_USERNAME.github.io folder on your computer.
     
-    Your computer's files are the ones on the left side. Also the default location for GitHub repositorys is Documents/GitHub.
+    Your computer's files are the ones on the left side. Also the default location for GitHub repositories is Documents/GitHub.
     
     ### Archive your default index.html
     
-    Once you have located your folder drag the `publc_html/index.html` folder on the server side inside your `GITHUB_USER.github.io/itis3135/archive` folder
+    Once you have located your folder drag the `public_html/index.html` file on the server side inside your `YOUR_GITHUB_USERNAME.github.io/itis3135/archives` folder
     
     ### Now move your project files
     
-    After you have archived the default `index.html` file done that move your `index.html` in the `root` of your website and `itis3135` folder into the `public_html` folder on the server side.
+    After you have archived the default `index.html` file, move your root `index.html` and the `itis3135` folder into the `public_html` folder on the server side.
     
     Your file tree should look like this now:
     
