--- a/app/module-1/m0c/page.mdx
+++ b/app/module-1/m0c/page.mdx
@@ -8,7 +8,7 @@ import { Steps } from 'nextra/components'
 
 ### Create your accounts
 
-Create accounts on freecodecamp and codecademy (ideally using the google account tied to your school account). Your username must either include your name, initials, mascot or something else that easily identifies it as you (since we have to cross-reference with your name in Canvas). Feel free to add any additional information to your profiles there. 
+Create accounts on [freecodecamp](https://www.freecodecamp.org/) and [Codecademy](https://www.codecademy.com/) (ideally using the google account tied to your school account). Your username must either include your name, initials, mascot or something else that easily identifies it as you (since we have to cross-reference with your name in Canvas). Feel free to add any additional information to your profiles there. 
 
 ### Adjust Privacy settings
 
@@ -39,7 +39,7 @@ Submit a reply post with:
 
 > [!IMPORTANT]
 >
-> Make the URL's clickable - if you put them in as text in the text area. do the editing necessary for that.\
+> Make the URL's clickable - if you put them in as text in the text area. do the editing necessary for that.
 >
 > There is no partial score on this (or many other assignments)
 > 
