faq + home page submission

--- a/app/module-1/m0d/page.mdx
+++ b/app/module-1/m0d/page.mdx
@@ -39,7 +39,7 @@ import { FileTree } from 'nextra/components'
     You can download the VPN from [here](https://vpn.charlotte.edu)
     > **Username:** `Niner_Net_username@charlotte.edu`\
     > **Password:** `Niner_Net_password`\
-    > ***Note:** Replace the bolded parts with your university provided login\*
+    > **Note:** Replace the bolded parts with your university provided login
     
     ### Install GitHub Desktop
     
