--- a/app/module-2/home-page/page.mdx
+++ b/app/module-2/home-page/page.mdx
@@ -64,9 +64,9 @@ Your footer should contain navigation links with a divider seperating each link
 
 Your title should be a combination of your heading 1, heading 2, and a divider of your choice. 
 
-For example if my heading 1 is `Alexander Prechtel's Advanced Pegasus` and my heading 2 is `Home` my title should be `Alexander Prechtel's Advanced Pegasus | Home`.
+For example if my heading 1 is `Alexander Prechtel` and my heading 2 is `Home` my title should be `Alexander Prechtel | Home`.
 
-##### Cascading Style Sheets (CSS)
+#### Cascading Style Sheets (CSS)
 
 You need to use an embedded stylesheet inside your `<head></head>{:html}` element. To add embedded styles you need to use the `<style></style>{:html}` element.
 
@@ -83,7 +83,7 @@ Update atleast these elements, using at minimum; `<body>{:html}`, `<h1>{:html}`,
 3. Margins
 > (auto 0, and max-width to something between 600-1000, and width to 80-95%) 
 
-##### Validation
+#### Validation
 
 Ensure your personal homepage includes the Accumulus Validator. See this [assignement](accumulus)
 
