Added more assignments using chatgpt

--- a/app/module-1/m0d/page.mdx
+++ b/app/module-1/m0d/page.mdx
@@ -100,8 +100,7 @@ import { FileTree } from 'nextra/components'
     
     Your file should look like this now:
     
-    ```html
-    <!-- USERNAME.github.io/index.html -->
+    ```html filename="USERNAME.github.io/index.html"
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -146,8 +145,7 @@ import { FileTree } from 'nextra/components'
     > The `href` attribute stands for hypertext reference and the value of it is where your link will go.
 
     **Your body should now look like this:**
-    ```html
-    <!-- USERNAME.github.io/index.html -->
+    ```html filename="USERNAME.github.io/index.html"
     <body>
     <h1>Welcome to my homepage!</h1>
     <a href="itis3135">Click here to go to my ITIS-3135 course page!</a>
@@ -185,8 +183,7 @@ import { FileTree } from 'nextra/components'
 
    Your new `index.html` file should look like this now:
 
-   ```html
-   <!-- USERNAME.github.io/itis3135/index.html -->
+   ```html filename="USERNAME.github.io/itis3135/index.html"
    <!DOCTYPE html>
    <html lang="en">
    <head>
